--- a/NoAddedFlyingMineMonsters/NoAddedFlyingMineMonsters.csproj
+++ b/NoAddedFlyingMineMonsters/NoAddedFlyingMineMonsters.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{204BF568-646C-4BDF-B398-CB8691259FD5}</ProjectGuid>
+    <ProjectGuid>{396ACFAD-5DAF-4D51-98AD-FFCAAD3BBC83}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FishingAutomaton</RootNamespace>
-    <AssemblyName>FishingAutomaton</AssemblyName>
+    <RootNamespace>NoAddedFlyingMineMonsters</RootNamespace>
+    <AssemblyName>NoAddedFlyingMineMonsters</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
