--- a/NoAddedFlyingMineMonsters/NoAddedFlyingMineMonsters.csproj
+++ b/NoAddedFlyingMineMonsters/NoAddedFlyingMineMonsters.csproj
@@ -64,9 +64,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lib\HarmonyHacks\NoRandomMonsters.cs" />
+    <Compile Include="Lib\Utils\Log.cs" />
+    <Compile Include="ModConfig.cs" />
+    <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="manifest.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
