--- a/FishingAutomaton/FishingAutomaton.csproj
+++ b/FishingAutomaton/FishingAutomaton.csproj
@@ -69,7 +69,6 @@
     <Compile Include="Lib\HarmonyHacks\NoSeaweedHack.cs" />
     <Compile Include="Lib\HarmonyHacks\NoTrashHack.cs" />
     <Compile Include="Lib\HarmonyHacks\NoTrashLavaMineHack.cs" />
-    <Compile Include="Lib\Utils\Log.cs" />
     <Compile Include="ModConfig.cs" />
     <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -82,6 +81,7 @@
     <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180630\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
   </ItemGroup>
   <ItemGroup />
+  <Import Project="..\DsStardewLib\DsStardewLib.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180630\build\Pathoschild.Stardew.ModBuildConfig.targets" Condition="Exists('..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180630\build\Pathoschild.Stardew.ModBuildConfig.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
