--- a/FishingAutomaton/manifest.json
+++ b/FishingAutomaton/manifest.json
@@ -5,6 +5,6 @@
   "Description": "Provides a automaton to automate the fishing game in Stardew Valley",
   "UniqueID": "Drynwynn.FishingAutomaton",
   "EntryDll": "FishingAutomaton.dll",
-  "MinimumApiVersion": "2.1.0-beta-20180630",
+  "MinimumApiVersion": "2.6-beta.19.1",
   "UpdateKeys": []
 }
