--- a/NoAddedFlyingMineMonsters/manifest.json
+++ b/NoAddedFlyingMineMonsters/manifest.json
@@ -5,6 +5,6 @@
   "Description": "Prevents flying monsters from randomly being added to the mine",
   "UniqueID": "Drynwynn.NoAddedFlyingMineMonsters",
   "EntryDll": "NoAddedFlyingMineMonsters.dll",
-  "MinimumApiVersion": "2.1.0-beta-20180630",
+  "MinimumApiVersion": "2.6-beta.19.1",
   "UpdateKeys": []
 }
