--- a/FishingAutomaton/manifest.json
+++ b/FishingAutomaton/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "FishingAutomaton",
   "Author": "Drynwynn",
-  "Version": "0.5.1",
+  "Version": "0.5.2",
   "Description": "Provides a automaton to automate the fishing game in Stardew Valley",
   "UniqueID": "Drynwynn.FishingAutomaton",
   "EntryDll": "FishingAutomaton.dll",
   "MinimumApiVersion": "2.6-beta.19.1",
-  "UpdateKeys": []
+  "UpdateKeys": [ "GitHub:Drynwynn/StardewValleyMods" ]
 }
