--- a/NoAddedFlyingMineMonsters/manifest.json
+++ b/NoAddedFlyingMineMonsters/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "NoAddedFlyingMineMonsters",
   "Author": "Drynwynn",
-  "Version": "0.5.1",
+  "Version": "0.5.2",
   "Description": "Prevents flying monsters from randomly being added to the mine",
   "UniqueID": "Drynwynn.NoAddedFlyingMineMonsters",
   "EntryDll": "NoAddedFlyingMineMonsters.dll",
   "MinimumApiVersion": "2.6-beta.19.1",
-  "UpdateKeys": []
+  "UpdateKeys": [ "GitHub:Drynwynn/StardewValleyMods" ]
 }
