--- a/FishingAutomaton/manifest.json
+++ b/FishingAutomaton/manifest.json
@@ -1,10 +1,11 @@
 ﻿{
   "Name": "FishingAutomaton",
   "Author": "Drynwynn",
-  "Version": "0.5.2",
+  "Version": "1.1.0",
   "Description": "Provides a automaton to automate the fishing game in Stardew Valley",
   "UniqueID": "Drynwynn.FishingAutomaton",
   "EntryDll": "FishingAutomaton.dll",
-  "MinimumApiVersion": "2.6-beta.19.1",
-  "UpdateKeys": [ "GitHub:Drynwynn/StardewValleyMods" ]
+  "MinimumApiVersion": "2.6",
+  "UpdateKeys": [ "Nexus:2527" ],
+  "DsUnifiedVersion": "1.1.0"
 }
