--- a/NoAddedFlyingMineMonsters/manifest.json
+++ b/NoAddedFlyingMineMonsters/manifest.json
@@ -1,10 +1,11 @@
 ﻿{
   "Name": "NoAddedFlyingMineMonsters",
   "Author": "Drynwynn",
-  "Version": "0.5.2",
+  "Version": "1.1.0",
   "Description": "Prevents flying monsters from randomly being added to the mine",
   "UniqueID": "Drynwynn.NoAddedFlyingMineMonsters",
   "EntryDll": "NoAddedFlyingMineMonsters.dll",
-  "MinimumApiVersion": "2.6-beta.19.1",
-  "UpdateKeys": [ "GitHub:Drynwynn/StardewValleyMods" ]
+  "MinimumApiVersion": "2.6",
+  "UpdateKeys": [ "Nexus:2528" ],
+  "DsUnifiedVersion": "1.1.0"
 }
